--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.49.3",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.21.3",
     "recharts": "^2.12.0",
     "shadcn-ui": "^0.8.0",
