--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "D": "^1.0.0",
+    "date-fns": "^3.3.1",
     "form": "^0.2.4",
     "localforage": "^1.10.0",
     "lucide-react": "^0.314.0",
