--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,9 +23,8 @@ jobs:
         node-version: 18.x
 
     - name: Build
-      run: |
-        npm install
-        npm run test
+      run: npm install
+      run: npm run test
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
